--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1 class="head">SHREE RENUKA MOTI CREATIONS</h1>
-    <div class="article">
-        <a  href="https://wa.me/919373804359?text=I'm%20interested%20in%20Motyacha%20Mahadev%20" ><img class="img" src="Clean Work Place LinkedIn Banner (1).png"></a> 
-
+    <div>
+        <img class="image" src="ओम नमः शिवाय (2).png">
+        <img class="image" src="2.png">
+        <img class="image" src="3.png">
+        <img class="image" src="4.png">
+        <img class="image" src="5.png">
+        <img class="image" src="6.png">
+        <img class="image" src="7.png">
     </div>
-</body>
+
+    <footer class="foot">
+        <p>| SHREE RENUKA MOTI CREATIONS | March 2021 | © | Made By: Rohank2502 |</p>
+      </footer>
+
+    
+  </body>
 </html>
